make sound work on Intel Macs, endian problems looking at file bytes. b=339124 r=mento sr=pinkerton